Redirect command output to files to prevent process locking when there are large outputs